syntax = "proto3";

import "qm/pb/inc_qua.proto";
import "google/protobuf/struct.proto";
import "qm/pb/qm_manager.proto";
import "qm/pb/general_messages.proto";

option java_multiple_files = true;
option java_package = "qm.grpc.compiler";
option java_outer_classname = "CompilerProto";
option objc_class_prefix = "HLW";

package qm.grpc.compiler;

message QuaValues {
    uint32 int_value = 1;
    double double_value = 2;
    bool boolean_value = 3;
}

// The request message containing the user's name.
message CompileRequest {
    qm.grpc.qua.QuaProgram program = 1;
    // used for logging inside internal services
    string jobId = 2;
}

message CompileResponse {
    bool ok = 1;
    repeated CompilerMessage messages = 2;
    bytes binary = 3;
    string metadata = 4;

    map<string, string> debug = 30;
}

message CompilerMessage {
    string message = 1;
    qm.grpc.general_messages.MessageLevel level = 2;
}


message ValidationResponse {
    repeated qm.grpc.qm_manager.ConfigValidationMessage messages = 1;
}

/*
A config that is similar to JSON in structure and can be converted to the real config
It has support for versioning
*/
message DynamicConfig {
    uint32 version = 1;
    google.protobuf.Struct root = 2;
}
